[package]
authors = ["Safin Singh <safinsingh.dev@gmail.com>"]
edition = "2018"
name = "gptinfo"
version = "1.0.0"
license = "MPLv2.0"
description = "A CLI app to analyze partition tables "
repository = "https://github.com/safinsingh/gptinfo"
readme = "README.md"
keywords = ["gpt", "partition-tables"]

[dependencies]
anyhow = "1.0.34"
colored = "2.0.0"
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
nix = "0.19.1"
thiserror = "1.0.22"
